--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -140,7 +140,8 @@
         <CheckBoxPreference
             android:key="pref_prev_mosaic"
             android:title="サムネイルのモザイク加工"
-            android:summary="サムネイルを非表示にする代わりにモザイク化して表示します"/>
+            android:summary="サムネイルを非表示にする代わりにモザイク化して表示します"
+            android:defaultValue="true"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="通知設定">
@@ -185,7 +186,7 @@
             android:key="pref_use_binded_user"
             android:title="タブのアカウントを使う"
             android:summary="表示中のタブに紐付いたアカウントが選ばれた状態で投稿画面を開きます\nマルチタイムラインと検索では機能しません"
-            android:defaultValue="false"/>
+            android:defaultValue="true"/>
         <ListPreference
             android:key="pref_upload_size"
             android:title="アップロード画像の圧縮"
@@ -253,11 +254,13 @@
         <CheckBoxPreference
             android:key="pref_limited_timeline"
             android:title="Limited TL"
-            android:summary="TLのツイート数が一定を超えた場合、古いものを画面から破棄するようにします" />
+            android:summary="TLのツイート数が一定を超えた場合、古いものを画面から破棄するようにします"
+            android:defaultValue="true"/>
         <CheckBoxPreference
             android:key="pref_remove_screenshot_subject"
             android:title="スクショ共有の本文を削除"
-            android:summary="Screenshot (〜) のような件名で共有ボタンから起動された時に文章をカットします\n機種によっては無意味だし余計な副作用があるかもしれない" />
+            android:summary="Screenshot (〜) のような件名で共有ボタンから起動された時に文章をカットします\n機種によっては無意味だし余計な副作用があるかもしれない"
+            android:defaultValue="true"/>
         <CheckBoxPreference
             android:key="pref_block_doubleclock"
             android:title="TLダブルクリックの防止"
